# connectedhomeip

./: .gitmodules  CODEOWNERS  Jenkinsfile  README.md
docs/silabs/: README.md
examples/light-switch-app/efr32/: BUILD.gn
examples/lighting-app/efr32/: BUILD.gn  README.md
examples/lighting-app/efr32/src/: main.cpp
examples/lighting-app/silabs/SiWx917/: BUILD.gn  args.gni
examples/lock-app/efr32/: BUILD.gn
examples/platform/efr32/: matter_config.cpp
examples/platform/efr32/rs911x/: rs911x.gni  rsi_if.c  wfx_rsi.h
examples/platform/efr32/wf200/: host_if.cpp
examples/platform/silabs/SiWx917/: BUILD.gn
examples/thermostat/efr32/: BUILD.gn  README.md
examples/thermostat/efr32/include/: AppTask.h
examples/thermostat/efr32/src/: AppTask.cpp
examples/window-app/efr32/: BUILD.gn
scripts/examples/: gn_efr32_example.sh
silabs_ci_scripts/: build_custom_examples.py  build_openthread_csa_examples.py  iot_reports.py
silabs_examples/sl-newLight/efr32/: BUILD.gn
silabs_examples/unify-matter-bridge/linux/zap-handlers/: unify-helper.js
src/include/platform/internal/: BLEManager.h
src/lwip/efr32/: BC4E174.tmp:6E53BFF5-0001-412b-8407-E3AEDE763511  lwipopts-wf200.h:6E53BFF5-0001-412b-8407-E3AEDE763511  lwipopts-wf200.h~:6E53BFF5-0001-412b-8407-E3AEDE763511
src/platform/EFR32/: BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  ConnectivityManagerImpl_WIFI.cpp  wfx_sl_ble_init.h  wfx_sl_module_init.c  wfx_sl_module_init.h
src/platform/EFR32/RS911x/: BLEManagerImpl.cpp  BLEManagerImpl.h  rsi_ble_config.h  rsi_ble_init.c  wfx_sl_ble_init.c  wfx_sl_ble_init.h
src/platform/EFR32/rs911x/: BLEManagerImpl.cpp  BLEManagerImpl.h  rsi_ble_config.h  wfx_sl_ble_init.c  wfx_sl_ble_init.h  wfx_sl_module_init.c  wfx_sl_module_init.h
src/platform/EFR32/wifi/: ethernetif.cpp  lwip_netif.cpp  wfx_host_events.h
src/platform/silabs/SiWx917/: BUILD.gn  wifi_args.gni
